--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,23 @@
 // TODO
+.headerContainer {
+  width: 100%;
+}
+.headerContent {
+  max-width: 1120px;
+  height: 105px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  padding: 4rem 2rem;
+
+  img {
+    cursor: pointer;
+  }
+  // img {
+  //   // width: 14.9rem;
+  //   // height: 1.6rem;
+  //   padding: 0 2rem;
+  //   margin-top: 5rem;
+
+  // }
+}
